<resources>
    <string name="app_name">SmartCity</string>
    <string name="title">SmartCity</string>
    <string name="title_Nota">Notes</string>
    <string name="title_addNota">Add Notes</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="pw">Password</string>
    <string name="entrar">Login</string>
    <string name="notas">Notes</string>
    <string name="addnota">Add Note</string>
    <string name="editnota">Edit Note</string>
    <string name="update">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="boxempty">"Empty Text Boxes "</string>
    <string name="description">Description</string>
    <string name="title_note">Title</string>
    <string name="toast_title">Insert Title</string>
    <string name="toast_desc">Insert Description</string>
    <string name="Login_Email">Insert an email</string>
    <string name="Login_Password">Insert a password</string>
    <string name="Error_login">Invalid data</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation_drawer" translatable="false">NavigationDrawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="addNote">asd</string>
    <string name="EmailShared" translatable="false">emailshared</string>
    <string name="Id_LoginUser" translatable="false">idloginuser</string>
    <string name="LoginShared" translatable="false">loginshared</string>
    <string name="idUser" translatable="false">iduser</string>
    <string name="preference_login" translatable="false">LoginSharePreferences</string>
    <string name="logout">Logout</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">Need to logout</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="tit">Title</string>
    <string name="occurrence">Occurrence Type</string>
    <string name="image">Image</string>
    <string name="updatesuccessful">Update Successfully</string>
    <string name="ErrorupdatePoint">Error to Update</string>
    <string name="deletepointtitle">Delete Point</string>
    <string name="DeletePoint">Are you sure you want to delete this point?</string>
    <string name="deletesucessful">Delete Successfully!</string>
    <string name="Errordelete">Error to delete</string>
    <string name="save">Save</string>
    <string-array name="tipos">
        <item></item>
        <item>@string/accidents</item>
        <item>@string/construction</item>
    </string-array>
    <string name="accidents">Accidents</string>
    <string name="construction">Construction</string>
    <string name="points">Points</string>
    <string name="all">All</string>
    <string name="distance">Distance</string>
    <string name="Distancia5km" translatable="false">5 km</string>
    <string name="Distancia2km" translatable="false">500 m</string>
    <string name="selectType">Select type occurrence</string>
    <string name="Insertimagename">Insert image name</string>
    <string name="selectImage">Select an image</string>
    <string name="errorInsert">Error to insert</string>
    <string name="InsertPoint">Insert Point</string>
    <string name="EditDeletePoint">Edit/Delete Point</string>
    <string name="saved">Saved Successfully!</string>
    <string name="errorTosaved">Error to Save</string>
</resources>